--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^5.9.8",
+    "@react-navigation/stack": "^5.14.9",
     "axios": "^0.26.0",
     "react": "17.0.2",
     "react-native": "0.67.3",
-    "react-native-image-slider-box": "^1.1.19"
+    "react-native-cli": "^2.0.1",
+    "react-native-gesture-handler": "^2.3.2",
+    "react-native-image-slider-box": "^1.1.19",
+    "react-native-reanimated": "^2.5.0",
+    "react-native-safe-area-context": "^4.2.2",
+    "react-native-screens": "^3.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
