--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^5.9.8",
     "@react-navigation/stack": "^5.14.9",
     "axios": "^0.26.0",
+    "dateformat": "^5.0.3",
     "react": "17.0.2",
     "react-native": "0.67.3",
     "react-native-cli": "^2.0.1",
@@ -21,7 +22,9 @@
     "react-native-image-slider-box": "^1.1.19",
     "react-native-reanimated": "^2.5.0",
     "react-native-safe-area-context": "^4.2.2",
-    "react-native-screens": "^3.13.1"
+    "react-native-screens": "^3.13.1",
+    "react-native-star-rating": "^1.1.0",
+    "react-native-vector-icons": "^9.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
